--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.KotlinCoroutinsTestApp.NoActionBar">
+            android:theme="@style/Theme.KotlinCoroutinsTestApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
